# MyGCS

./: CMakeLists.txt  QGCExternalLibs.pri  qgcresources.qrc  qgroundcontrol.pro  qgroundcontrol.qrc
.github/workflows/: linux.yml
custom-example/: CMakeLists.txt  qgroundcontrol.qrc
custom-example/src/: CMakeLists.txt
src/: CMakeLists.txt  QGCApplication.cc  QGCToolbox.cc  QGCToolbox.h
src/AnalyzeView/: CMakeLists.txt
src/AutoPilotPlugins/APM/: APMAutoPilotPlugin.cc  CMakeLists.txt
src/AutoPilotPlugins/PX4/: ActuatorComponent.qml  CMakeLists.txt  PX4AutoPilotPlugin.cc
src/Camera/: VehicleCameraControl.cc
src/Comms/: LinkInterface.h  LinkManager.cc  LinkManager.h  LogReplayLink.cc  LogReplayLink.h  MAVLinkProtocol.h  SerialLink.cc  SerialLink.h
src/FirmwarePlugin/: FirmwarePlugin.cc  FirmwarePlugin.h
src/FirmwarePlugin/APM/: APM-MavCmdInfoMultiRotor.json  APM-MavCmdInfoSub.json  APMFirmwarePlugin.cc
src/FirmwarePlugin/PX4/: PX4FirmwarePlugin.cc
src/FlightDisplay/: FlyViewMap.qml  GuidedActionConfirm.qml  GuidedActionsController.qml
src/GPS/: CMakeLists.txt  GPSManager.cc  GPSProvider.cc  GPSProvider.h  GPSRtk.cc  GPSRtk.h  RTCMMavlink.cc  RTCMMavlink.h  definitions.h  satellite_info.h  sensor_gps.h
src/MissionManager/: CMakeLists.txt  GeoFenceController.cc  GeoFenceController.h  MavCmdInfoCommon.json  TransectStyleComplexItem.cc
src/PlanView/: CMakeLists.txt  PlanToolBarIndicators.qml  PlanView.qml  SurveyItemEditor.qml
src/QmlControls/: CMakeLists.txt  QGroundControlQmlGlobal.cc  QGroundControlQmlGlobal.h
src/QtLocationPlugin/QMLControl/: QGCMapEngineManager.cc  QGCMapEngineManager.h
src/Settings/: App.SettingsGroup.json  AppSettings.cc  AppSettings.h  SettingsManager.cc  SettingsManager.h
src/UI/: MainRootWindow.qml
src/UTMSP/: CMakeLists.txt
src/Utilities/: QGCLoggingCategory.cc  QGCLoggingCategory.h
src/Vehicle/: CMakeLists.txt  RemoteIDManager.cc  Vehicle.cc  Vehicle.h
src/Vehicle/Actuators/: ActuatorTesting.cc  ActuatorTesting.h  Actuators.cc
src/ui/preferences/: GeneralSettings.qml
test/: CMakeLists.txt  UnitTestList.cc
test/GPS/: GpsTest.cc  GpsTest.h
